flux/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8ty-nltk
  namespace: k8ty-nltk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - hosts:
        - nltk.k8ty.app
      secretName: k8ty-nltk-tls
  rules:
    - host: nltk.k8ty.app
      http:
        paths:
          - path: /
            backend:
              serviceName: k8ty-nltk
              servicePort: 50051
